# PDFtoMD

./: .cspell-dictionaries.txt  .env.optimized  .env.template  .gitignore  .markdownlint.json  .pylintrc  AUTO_BATCH_GUIDE.md  CAN_RS485_Master_Documentation.md  CHANGELOG.md  CLI_LINTING_CONTROL.md  CONTRIBUTORS.md  COPYRIGHT  DOCUMENTATION_UPDATE_SUMMARY.md  ERROR_RESOLUTION_COMPLETE.md  FUNCTIONALITY_TEST_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LM_Studio_Optimization_Guide.md  NOTICE  ORGANIZATION_PLAN.md  PATH_CORRECTIONS_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RELEASE_NOTES_v4.1.0.md  SECURITY.md  SECURITY_ALERT_RESOLUTION.md  SECURITY_REMEDIATION_COMPLETE.md  SSOT_GUIDE.md  WORKSPACE_LINTING.md.backup  auto_batch.bat  auto_batch.py  auto_batch_config_sample.py  auto_batch_launcher.bat  batch_api.py  batch_requests_1753450809.jsonl  cleanup.py  cleanup_backups.py  config.py  (+21 more)
.github/: SECURITY.md
.github/codeql/: README.md  codeql-config.yml  python-security-queries.qls
.github/workflows/: build_image.yml  changelog.yml  codeql.yml  comprehensive-test.yml
batch/: auto_batch.py  batch_convert.py  monitor_batch.py  track_batch_cost.py
config/: .env.sample  auto_batch_config_sample.py
converted_markdown/session_20250716_134359/: README.md  cost_analysis.json
converted_old_20250715_200609/: CAN-MAX485_batch.md  CAN-RS485-CAN-HAT-B-schematic_batch.md  CAN-RS485-CAN-HAT-user-manual-en_batch.md  CAN-RS485-CAN-Shield-Schematic_batch.md  CAN-RS485-CAN-Shield-User-Manual_batch.md  CAN-SN65HVD230_batch.md  CAN-SP3481_SP3485_batch.md
docs/: AUTO_BATCH_GUIDE.md  CHANGELOG.md  CHANGELOG.md.backup  CLI_LINTING_CONTROL.md  GLOSSARY.md  GLOSSARY.md.backup  IMPLEMENTATION.md  QUICK_START.md  README.md  README.md.backup  README_zh.md  README_zh.md.backup  RELEASE_NOTES_v4.1.0.md  SPELL_CHECK_GUIDE.md  SPELL_CHECK_GUIDE.md.backup
docs/development/: BATCH_CLEANUP_IMPROVEMENTS.md  BENIGN_WARNING_SUPPRESSION.md  CLI_LINTING_CONTROL.md  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md.backup  ENHANCED_LINTER_BUG_RESOLUTION.md  ENHANCED_LINTING_GUIDE.md  ERROR_HANDLING_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ORGANIZATION_PLAN.md  PARALLEL_PROCESSING_ANALYSIS.md  PATH_CORRECTIONS_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.md.backup  REORGANIZATION_COMPLETE.md  REORGANIZATION_COMPLETE.md.backup  REORGANIZATION_PLAN.md  WORKSPACE_LINTING.md
docs/guides/: AUTO_BATCH_GUIDE.md  AUTO_BATCH_GUIDE.md.backup  INSTALLATION_GUIDE.md  LM_Studio_Optimization_Guide.md  LM_Studio_Optimization_Guide.md.backup  QUICK_START.md  QUICK_START.md.backup  SSOT_GUIDE.md  SSOT_GUIDE.md.backup
docs/legal/: CONTRIBUTORS.md  COPYRIGHT
docs/security/: GITHUB_ALERT_RESOLUTION.md  GITHUB_SECURITY_SETUP.md  SECURITY.md  SECURITY.md.backup  SECURITY_ALERT_RESOLUTION.md  SECURITY_REMEDIATION_COMPLETE.md
enhanced_copilot_batch_processing/: page_01_prompt.md
outputs/converted/: 20250716_133817_conversion_summary.md  20250716_dm00105823-nucleo-f401re-user-manual-stmicroelectronics_batch.md.backup  20250716_dm00105823-nucleo-f401re-user-manual_batch.md  20250716_stsw-spin002_batch.md  20250716_stsw-spin002_batch.md.backup  20250716_stsw-spin002_batch.md.backup.backup  20250716_um1724-stm32-nucleo64-boards-mb1136-stmicroelectronics_batch.md.backup  20250716_um1724-stm32-nucleo64-boards_batch.md  20250716_x-nucleo-ihm03a1_schematic_batch.md.backup  debug_test.md  test_sample_simple.md
outputs/metadata/: 20250716_summary.json
pdfs/: .gitkeep
prompts/: __init__.py  batch_prompts.py  fast_prompts.py  mermaid_prompts.py  standard_prompts.py
scripts/: configure_github_security.py  configure_security.ps1  dependency_update_report.py  resolve_github_alerts.py  security_audit.py  validate_spell_check.py
src/batch/: __init__.py  auto_batch.py  batch_api.py  batch_convert.py  master.py  monitor_batch.py  track_batch_cost.py
src/core/: FileWorker.py  ImageWorker.py  LLMClient.py  PDFWorker.py  Util.py  __init__.py  main.py  main_fast.py
src/scripts/: auto_batch.py  auto_batch.py.backup  cleanup_backups.py  enhanced_workspace_lint.py  lint.py  main.py  main.py.backup  main_fast.py  main_fast.py.backup  master.py  master.py.backup  quick_lint.py  quick_lint.py.backup  workspace_lint.py  workspace_lint.py.backup
src/utils/: __init__.py  cleanup_manager.py  combine_pages.py  markdown_cleaner.py  metadata_embedder.py  switch_api.py
src/utils/conversion/: convert_any.py  (+4 more)
temp/: auto_batch.bat
tests/samples/: test_sample.md  test_sample_simple.md
tools/conversion/: combine_pages.py  convert_any.py  convert_any.py.bak  convert_direct.py  convert_fast.py  convert_fast.py.bak  convert_single.py  convert_single.py.bak  convert_single_clean.py
tools/optimization/: check_lm_settings.py  find_lm_configs.py  optimize_lm_studio.py
tools/testing/: debug_metadata.py  example_metadata_usage.py  simple_llm_test.py  test_batch_api.py  test_config.py  test_llm_client.py  test_metadata.py  test_openai.py  test_optimized_performance.py  test_vision_models.py
utils/: __init__.py  combine_pages.py  metadata_embedder.py
utils/conversion/: convert_any.py  convert_direct.py  convert_fast.py  convert_single.py
utils/linting/: markdown_linter.py
utils/optimization/: check_lm_settings.py  find_lm_configs.py  lm_studio_optimizer.py  optimization_steps.py  optimize_lm_studio.py
utils/testing/: simple_llm_test.py  test_llm_client.py  test_openai.py  test_optimized_performance.py
(+17 files in other folders)
