[project]
name = "markpdfdown"
version = "3.0.0"
description = "Enterprise-ready PDF to Markdown conversion tool powered by multimodal AI. Features secure SSOT configuration, centralized API key management, comprehensive security controls, and enterprise-grade batch processing capabilities."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Joseph Wright", email = "joey.wright@outlook.com"},
]
maintainers = [
    {name = "Joseph Wright", email = "joey.wright@outlook.com"},
]
keywords = ["pdf", "markdown", "ai", "llm", "conversion", "batch-processing", "openai", "enterprise", "security", "ssot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "openai==1.66.3",
    "pymupdf==1.25.3",
    "pypdf2==3.0.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/ch0t4nk/markpdfdown"
Repository = "https://github.com/ch0t4nk/markpdfdown"
Issues = "https://github.com/ch0t4nk/markpdfdown/issues"
Documentation = "https://github.com/ch0t4nk/markpdfdown#readme"
"Original Project" = "https://github.com/MarkPDFdown/markpdfdown"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest==8.3.5",
    "ruff>=0.11.11",
]

# Ruff 配置
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP007", # Use `X | Y` for type annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["markpdfdown"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markpdfdown"]

[tool.hatch.build.targets.wheel.force-include]
"." = "."
